Compile framework in generator.

--- a/tools/templates/app/index.html
+++ b/tools/templates/app/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>$App$</title>
 	
-	<script src="lib/batman.js"></script>
+	<script src="lib/batman-min.js"></script>
 	
 	<style>
 	* {
