--- a/examples/alfred_full/app/views/layouts/application.html.erb
+++ b/examples/alfred_full/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alfred</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
+    <title>Alfred: Batman's Todos</title>
+    
+    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <%= stylesheet_link_tag "application" %>
+    
+    <script type="text/javascript" src="/alfred/lib/batman.js"></script>
 </head>
+
 <body>
-
-<%= yield %>
-
+    <div id="container">
+    <%= yield %>
+    </div>
 </body>
 </html>
