Fix a bug in app template.

--- a/tools/templates/app/index.html
+++ b/tools/templates/app/index.html
@@ -38,7 +38,7 @@
   <div data-yield="main"></div>
   
   <div id="batman">
-    <input data-bind="$App$.name" />
+    <input data-bind="App.name" />
     <code>powered by</code><br />
     <img src="resources/batman.png" />
   </div>
