--- a/examples/twitter_comments/views/app/query.html
+++ b/examples/twitter_comments/views/app/query.html
@@ -1,5 +1,5 @@
 <ul>
-  <li class="twitter" data-each-tweet="Tweet.all">
+  <li class="twitter" data-foreach-tweet="Tweet.all">
     <a class="avatar" data-bind-href="tweet.avatarLink"><img data-bind-src="tweet.profile_image_url" /></a>
     <p><strong data-bind="tweet.from_user"></strong>: <span data-bind="tweet.formatted"></span></p>
     <div class="clearfix"></div>
