--- a/examples/twitter_comments/views/app/index.html
+++ b/examples/twitter_comments/views/app/index.html
@@ -1,1 +1,1 @@
-<h1><span data-bind="Twitter.name">Twitter</span> is ready to fight crime!</h1>
+<h1><span>Twitter</span> is ready to fight crime!</h1>
