--- a/examples/twitter_comments/views/comments/index.html
+++ b/examples/twitter_comments/views/comments/index.html
@@ -1,4 +1,4 @@
 <h1 data-bind="tweet.text">Comments</h1>
-<div data-each-comment="tweet.comments">
+<div data-foreach-comment="tweet.comments">
   <strong data-bind="comment.name"></strong>: <span data-bind="comment.body"></span>
 </div>
