--- a/tools/templates/app/views/app/index.html
+++ b/tools/templates/app/views/app/index.html
@@ -1,1 +1,1 @@
-<h1><span data-bind="$App$.name">$App$</span> is ready to fight crime!</h1>
+<h1><span data-bind="App.name">$App$</span> is ready to fight crime!</h1>
