Moved Batman to modules.exports instead of exports.Batman, revamped tools to work and look nice.
 - moved Batman to be the exported object instead of a property on it.
 - rewrote the tools to use cli and its handy stuff like auto generation of usage's
 - made the server compile CoffeeScript on the fly when asked for a nonexistent .js file in a directory with a .coffee file of the same name
 - made the server serve lib from the batman project root to routes matching /batman
 - updated the batman g generated files to work and be a bit more helpful with some boilerplate comments

--- a/tools/templates/app/index.html
+++ b/tools/templates/app/index.html
@@ -3,8 +3,11 @@
 <head>
   <title>$App$</title>
   
-  <script src="lib/coffee-script.js"></script>
-  <script src="lib/batman.js"></script>
+  <script src="/batman/coffee-script.js" type="text/javascript"></script>
+  <script src="/batman/es5-shim.js" type="text/javascript"></script>
+  <script src="/batman/dist/batman.nodep.js" type="text/javascript"></script>
+
+  <script src="app.js" type="text/javascript"></script>
   
   <style>
   * {
@@ -36,21 +39,13 @@
 
 <body>
   <div data-yield="main"></div>
-  
   <div id="batman">
-    <input data-bind="App.name" />
+    <span>$App$</span>
     <code>powered by</code><br />
-    <img src="resources/batman.png" />
+    <img src="/resources/batman.png" />
   </div>
-  
-  <script type="text/coffeescript">
-  class $App$ extends Batman.App
-    @controller 'app'
-    @root 'app.index'
-    
-    name: '$App$'
-  
-  $App$.run()
+  <script type="text/javascript">
+    $App$.run();
   </script>
 </body>
 </html>
