--- a/tools/templates/app/index.html
+++ b/tools/templates/app/index.html
@@ -5,7 +5,7 @@
 
   <script src="/batman/coffee-script.js" type="text/javascript"></script>
   <script src="/batman/es5-shim.js" type="text/javascript"></script>
-  <script src="/batman/dist/batman.solo.js" type="text/javascript"></script>
+  <script src="/batman/dist/batman.js" type="text/javascript"></script>
 
   <script src="$app$.js" type="text/javascript"></script>
 
