--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -18,7 +18,7 @@
       <span class="title">Size:</span> 15KB gzipped
     </p>
     <p>{{ site.download.blurb }}</p>
-    <a href="http://github.com/Shopify/batman/blob/master/README.md" class="release-notes">View the full release notes</a>
+    <a href="http://github.com/Shopify/batman/blob/master/README.md" class="release-notes">View the README</a>
   </div><div style="clear:both;"></div>
   <!-- End download-box -->
   
