Kill the starter package. No one was using it.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@
 
     <ul>
       <li>
-        <a class="shopify-logo" href="http://www.shopify.com" target="_blank"><img src="/images/logo-shopify.png" width="185" height="54" /></a>
+        <a class="shopify-logo" href="http://www.shopify.com" target="_blank"><img src="/images/logo-shopify.png" width="185" height="54" alt="ecommerce software" /></a>
         Copyright 2011 &ndash; Shopify. Released under the <a href="http://www.opensource.org/licenses/mit-license.php" target="_blank">MIT license</a>.<br />
         batman.js is a Shopify project, created by <a href="http://github.com/nciagra">Nick Small</a>. <a href="http://github.com/shopify/batman" class="inline-link">GitHub</a> <a href="http://twitter.com/nciagra" class="inline-link">Twitter</a></li>
     </ul>
