Use config date in intro download box.

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,6 +1,6 @@
 <!-- Begin intro-wrapper -->
 <div id="intro-wrapper">
-  
+
   <!-- Begin intro-statement -->
   <div id="intro-statement">
     <h2>Build web apps beautifully and quickly</h2>
@@ -8,13 +8,13 @@
     <p>Want to learn more? Check out <a href="/features.html">all the features</a> or some <a href="/examples.html">examples</a>.</p>
   </div>
   <!-- End intro-statement -->
-  
+
   <!-- Begin download-box -->
   <div id="download-box">
     <a href="/download.html" class="btn-download">Download batman.js</a>
     <p>
       <span class="title">Latest version:</span> {{ site.download.version }} <br />
-      <span class="title">Updated:</span> August 23, 2011<br />
+      <span class="title">Updated:</span> {{ site.download.date }} <br />
       <span class="title">Language:</span> CoffeeScript <br />
       <span class="title">Size:</span> 15KB gzipped
     </p>
@@ -22,6 +22,6 @@
     <a href="http://github.com/Shopify/batman/blob/master/README.md" class="release-notes">View the README</a>
   </div><div style="clear:both;"></div>
   <!-- End download-box -->
-  
+
 </div>
 <!-- End intro-wrapper -->
