--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -19,9 +19,7 @@
       <span class="title">Size:</span> 15KB gzipped
     </p>
     <p>{{ site.download.blurb }}</p>
-    <a href="http://github.com/Shopify/batman/blob/master/CHANGELOG.md" class="release-links">View the release notes</a>
-    <br/>
-    <a href="http://github.com/Shopify/batman" class="release-links">View on GitHub</a>
+    <p>View the <a href="http://github.com/Shopify/batman/blob/master/CHANGELOG.md" class="release-links">release notes</a> or the <a href="http://github.com/Shopify/batman" class="release-links">code</a>.</p>
   </div><div style="clear:both;"></div>
   <!-- End download-box -->
 
