Add clearfix between header and content.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,6 +66,8 @@
     </div>
   </div>
   <!-- End header-wrapper -->
+  
+  <div class="clearfix"></div>
 
   <!-- Begin content-wrapper -->
   <div id="content-wrapper">
