--- a/_includes/examples_sidebar.html
+++ b/_includes/examples_sidebar.html
@@ -6,7 +6,7 @@
   {% if page.subkey == example.key %}
   <li class="active">{{ example.title }}</li>
   {% else %}
-  <li><a href="/{{ example.key | replace: ' ', '_' }}.html">{{ example.title }}</a></li>
+  <li><a href="{{ example.url }}">{{ example.title }}</a></li>
   {% endif %}
   {% endfor %}
 </ul>
