Add James Draper's new intro text for maximum developer happiness.

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
   <!-- Begin intro-statement -->
   <div id="intro-statement">
     <h2>Build web apps beautifully and quickly</h2>
-    <p>batman.js is a full-stack microframework extracted from real use and designed to maximize developer and designer happiness. It favors convention over configuration, template-less views, and high performance by simply not doing very much. It all adds up to blazingly fast web apps with a great development process; it's batman.js.</p>
+    <p>Batman.js is a framework for building rich web applications with CoffeeScript or JavaScript. App code is concise and declarative, thanks to a powerful system of view bindings and observable properties. The API is designed with developer and designer happiness as its first priority.</p>
     <p>Want to learn more? Check out <a href="/features.html">all the features</a> or some <a href="/examples.html">examples</a>.</p>
   </div>
   <!-- End intro-statement -->
