Make the batman new generated apps work with the new window scoping introduced in 50b897784329d66fda1358c6c3b9e3cdcedd95f6.
 - Fix #264.

--- a/tools/templates/app/index.html
+++ b/tools/templates/app/index.html
@@ -43,7 +43,7 @@
     <span>$App$</span>
     <code>powered by</code><br />
     <img src="/resources/batman.png" />
-    <input type="text" data-bind="$App$.mission"/>
+    <input type="text" data-bind="window.$App$.mission"/>
   </div>
   <script type="text/javascript">
     if(window.location.protocol === 'file:') {
