--- a/tools/templates/app/views/app/index.html
+++ b/tools/templates/app/views/app/index.html
@@ -1,1 +1,1 @@
-<h1>$App$ is ready to <span data-bind="$App$.mission"></span>!</h1>
+<h1>$App$ is ready to <span data-bind="window.$App$.mission"></span>!</h1>
