--- a/docs/css/_base.scss
+++ b/docs/css/_base.scss
@@ -1,31 +1,3 @@
-@font-face {
-  font-family: 'MetaBook';
-  src: url('fonts/metapro-book.otf') format('opentype');
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'MetaBook';
-  src: url('fonts/metapro-normal.otf') format('opentype');
-  font-weight: 200;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'MetaBook';
-  src: url('fonts/metapro-bold.otf') format('opentype');
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'MetaBook';
-  src: url('fonts/metapro-book-italic.otf') format('opentype');
-  font-weight: 400;
-  font-style: italic;
-}
-
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
@@ -35,7 +7,7 @@ audio:not([controls]) { display: none; }
 
 html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
 html, button, input, select, textarea { font-family: sans-serif; color: #444; }
-body { margin: 0; font-size: 1em; line-height: 1.4; font-family: metabook, sans-serif; }
+body { margin: 0; font-size: 1em; line-height: 1.4; font-family: "ff-meta-web-pro-1","ff-meta-web-pro-2", sans-serif; }
 
 ::-moz-selection { background: #a9a9fa; color: #fff; text-shadow: none; }
 ::selection { background: #a9a9fa; color: #fff; text-shadow: none; }
@@ -52,8 +24,10 @@ dfn { font-style: italic; }
 hr { display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0; }
 ins { background: #ff9; color: #000; text-decoration: none; }
 mark { background: #ff0; color: #000; font-style: italic; font-weight: bold; }
-pre, code, kbd, samp { font-family: monospace, serif; _font-family: 'courier new', monospace; font-size: 1em; }
-pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }
+
+pre, code, kbd, samp { font-family: 'PT Mono', 'courier new', monospace; font-size: 1em; }
+pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; padding: 0; margin: 0 0 1em 0; }
+code { color: #444; font-size: 13px; background: #f5f5ff; padding: 2px; } 
 
 q { quotes: none; }
 q:before, q:after { content: ""; content: none; }
@@ -72,7 +46,7 @@ figure { margin: 0; }
 
 form { margin: 0; }
 fieldset { border: 0; margin: 0; padding: 0; }
-input, textarea { font-family: metabook, sans-serif }
+input, textarea { font-family: "ff-meta-web-pro-1","ff-meta-web-pro-2", sans-serif }
 
 label { cursor: pointer; }
 legend { border: 0; *margin-left: -7px; padding: 0; white-space: normal; }
