--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -1,20 +1,23 @@
 /** 
- * Batdocs 
- * v0 - unsmacss'd
+ * Batman Documentation 
  */
 
-@import "mixins";
+@mixin transition($properties:all,$timing:0.3s,$transition:ease-in-out,$delay:0.0s) { -o-transition: $properties $timing $transition $delay; -webkit-transition: $properties $timing $transition $delay; -moz-transition: $properties $timing $transition $delay; }
+@mixin gradient($color1, $color2) { background-color:$color1; background-image:-o-linear-gradient($color2, $color1); background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, $color1),color-stop(1, $color2));  background-image: -moz-linear-gradient(center bottom,$color1 0%, $color2 100%); }
+@mixin box-sizing($model:content-box) { -moz-box-sizing:$model; -webkit-box-sizing:$model; box-sizing:$model; }
+
 @import "base";
 
 body { background: #eee url(../img/bg-texture.png); }
 
-// temp
+// temporary
 #expand-all-the-things{ 
   width: 30px;
   height: 30px;
   display: block;
   position: fixed;
   bottom: 0; right: 0;
+  cursor: pointer;
   &:hover { background-color: rgba(255,235,62,.5); }
 }
 
@@ -27,47 +30,35 @@ body { background: #eee url(../img/bg-texture.png); }
   min-width: 960px;
 }
 
-#top { 
-  padding: 20px;
-  border-bottom: solid 1px #242432;
-  @include gradient(#3B3B81,#504c90);
-
-  h1 a { color: #fff; font-size: 20px; float: left; text-decoration: none; } 
-
-  #back-to-top { 
-    display: block; 
-    background: #333; 
-    width: 50px; 
-    position: fixed; 
-    top: 0; 
-    right: 8%; 
-    text-align: center; 
-    padding: 3px; 
-    font-size: 12px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,.1); 
-    border: solid 1px #111;
-    color: #fff;
-    text-decoration: none;
-    @include gradient(#555, #333)
-  }
+#fixed-goto-top { 
+  display: block; 
+  background: #333; 
+  width: 50px; 
+  position: fixed; 
+  top: 0; 
+  right: 8%; 
+  text-align: center; 
+  padding: 3px; 
+  font-size: 12px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.1); 
+  border: solid 1px #111;
+  color: #fff;
+  text-decoration: none;
+  @include gradient(#555, #333)
 }
 
 h1 { margin-top: 0; }
-
 a, a:visited { color: #000; }
 a:hover { color: #ed5114; }
 p { margin: 0 0 .5em 0; }
 
-pre { margin: 0 0 1em 0; }
-code, pre { font-family: 'PT Mono', monospace;}
-code { color: #444; font-size: 13px; background: #f5f5ff; padding: 2px; } 
-
-div[role='main']{
-  padding-top: 20px;
-  width: 76.0%;
+.content{
+  padding: 50px;  
+  padding-top: 30px;
+  margin-left: 280px;
+  width: auto;
   float: left; 
   background: #fff;
-  padding: 50px;
   border-bottom: solid 1px #ccc;
   border-right: solid 1px #ccc;
   border-radius: 0 0 12px 0;
@@ -79,24 +70,40 @@ div[role='main']{
   h4 { margin: 25px 0 5px 0; color: #333; }
 }
 
-div[role='sidebar']{
-  width: 24.0%;
+
+
+/** 
+ * Left Column */
+
+.sidebar{
+  width: 280px;
   height: 100%;
   font-size: 13px;
   font-weight: 200;
   float: left;
+  overflow: auto;
+  overflow-y: auto;
+  top: 0; left: 0;
+  position: fixed;
+  box-shadow: -5px 0 10px 5px #000 inset;
 
   a { color: #f5f5ff; text-decoration: none; }
   a:hover { color: #fff; }
-
-  form{ padding: 20px; }
-  input{ font-size: 14px; color: #999; background: #fff; border: solid 1px #000; padding: 4px; width: 100%; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;  }
+  
+  #quick-search{ 
+    margin: 30px 0 20px 20px;
+    font-size: 14px; 
+    color: #999; 
+    background: #fff; 
+    border: solid 1px #000; 
+    padding: 4px; 
+    width: 212px;
+    @include box-sizing('border-box')
+  }
 }
 
-
-
-#table_of_contents {
-  padding: 15px 0 0 0; margin: 0;
+.nav-list {
+  padding: 0; margin: 0;
 
   a { display: block; padding: 2px 0; }
   a:hover { background: #3a3b63; }
@@ -105,9 +112,9 @@ div[role='sidebar']{
   li { margin: 0; padding: 0; list-style: none; }  
 
   /* first level */
+  & > li > ul { border-top: solid 1px #3f3e66 }
   & > li > ul > li { border-bottom: solid 1px #3f3e66; padding: 0 0 15px 0; box-shadow: 0 5px 5px 1px rgba(0,0,0,.25) inset; }
-  & > li > ul > li > a { font-size: 14px; color: #fff; padding: 6px 3px 3px 20px; margin: 0 0 10px 0; background: rgba(59,59,128,.4); border-bottom: solid 1px rgba(0,0,0,.75);
- }
+  & > li > ul > li > a { font-size: 14px; color: #fff; padding: 4px 4px 4px 20px; margin: 0 0 10px 0; background: rgba(59,59,128,.4); border-bottom: solid 1px rgba(0,0,0,.75); }
 
   /* second level */
   li li li { border: none; margin: 0; padding: 0; font-weight: 400; }
@@ -119,149 +126,13 @@ div[role='sidebar']{
   li li li ul { margin: 0 0 5px 0; }
   li li li li a { padding-left: 35px; font-size: 12px; }
 
-  /*
-  li ul { background: magenta; }
-  li li ul { background: pink;  }
-  li li li ul { background: cyan; }   
-  */
-
 }
+
+@import "syntax-highlighting";
 
 
 /** 
- * Syntax Highlighting 
- */
-.highlight .hll { background-color: #ffffcc }
-.highlight  { background: #002B36; }
-.highlight .c { color: #999 } /* Comment */
-.highlight .err { color: #93A1A1 } /* Error */
-.highlight .g { color: #444 } /* Generic */
-.highlight .k { color: #859900 } /* Keyword */
-.highlight .l { color: #93A1A1 } /* Literal */
-.highlight .n { color: #93A1A1 } /* Name */
-.highlight .o { color: #859900 } /* Operator */
-.highlight .x { color: #6666de } /* Other */
-.highlight .p { color: #93A1A1 } /* Punctuation */
-.highlight .cm { color: #586E75 } /* Comment.Multiline */
-.highlight .cp { color: #859900 } /* Comment.Preproc */
-.highlight .c1 { color: #999 } /* Comment.Single */
-.highlight .cs { color: #859900 } /* Comment.Special */
-.highlight .gd { color: #2AA198 } /* Generic.Deleted */
-.highlight .ge { color: #93A1A1; font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #DC322F } /* Generic.Error */
-.highlight .gh { color: #6666de } /* Generic.Heading */
-.highlight .gi { color: #859900 } /* Generic.Inserted */
-.highlight .go { color: #444 } /* Generic.Output */
-.highlight .gp { color: #444 } /* Generic.Prompt */
-.highlight .gs { color: #444; font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #6666de } /* Generic.Subheading */
-.highlight .gt { color: #444 } /* Generic.Traceback */
-.highlight .kc { color: #6666de } /* Keyword.Constant */
-.highlight .kd { color: #268BD2 } /* Keyword.Declaration */
-.highlight .kn { color: #859900 } /* Keyword.Namespace */
-.highlight .kp { color: #859900 } /* Keyword.Pseudo */
-.highlight .kr { color: #268BD2 } /* Keyword.Reserved */
-.highlight .kt { color: #DC322F } /* Keyword.Type */
-.highlight .ld { color: #93A1A1 } /* Literal.Date */
-.highlight .m { color: #2AA198 } /* Literal.Number */
-.highlight .s { color: #2AA198 } /* Literal.String */
-.highlight .na { color: #444 } /* Name.Attribute */
-.highlight .nb { color: #d8a70f } /* Name.Builtin */
-.highlight .nc { color: #268BD2 } /* Name.Class */
-.highlight .no { color: #6666de } /* Name.Constant */
-.highlight .nd { color: #268BD2 } /* Name.Decorator */
-.highlight .ni { color: #6666de } /* Name.Entity */
-.highlight .ne { color: #6666de } /* Name.Exception */
-.highlight .nf { color: #268BD2 } /* Name.Function */
-.highlight .nl { color: #444 } /* Name.Label */
-.highlight .nn { color: #444 } /* Name.Namespace */
-.highlight .nx { color: #444 } /* Name.Other */
-.highlight .py { color: #444 } /* Name.Property */
-.highlight .nt { color: #268BD2 } /* Name.Tag */
-.highlight .nv { color: #268BD2 } /* Name.Variable */
-.highlight .ow { color: #859900 } /* Operator.Word */
-.highlight .w { color: #444 } /* Text.Whitespace */
-.highlight .mf { color: #2AA198 } /* Literal.Number.Float */
-.highlight .mh { color: #2AA198 } /* Literal.Number.Hex */
-.highlight .mi { color: #2AA198 } /* Literal.Number.Integer */
-.highlight .mo { color: #2AA198 } /* Literal.Number.Oct */
-.highlight .sb { color: #586E75 } /* Literal.String.Backtick */
-.highlight .sc { color: #2AA198 } /* Literal.String.Char */
-.highlight .sd { color: #444 } /* Literal.String.Doc */
-.highlight .s2 { color: #2AA198 } /* Literal.String.Double */
-.highlight .se { color: #6666de } /* Literal.String.Escape */
-.highlight .sh { color: #93A1A1 } /* Literal.String.Heredoc */
-.highlight .si { color: #2AA198 } /* Literal.String.Interpol */
-.highlight .sx { color: #2AA198 } /* Literal.String.Other */
-.highlight .sr { color: #DC322F } /* Literal.String.Regex */
-.highlight .s1 { color: #2AA198 } /* Literal.String.Single */
-.highlight .ss { color: #2AA198 } /* Literal.String.Symbol */
-.highlight .bp { color: #268BD2 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #268BD2 } /* Name.Variable.Class */
-.highlight .vg { color: #268BD2 } /* Name.Variable.Global */
-.highlight .vi { color: #268BD2 } /* Name.Variable.Instance */
-.highlight .il { color: #2AA198 } /* Literal.Number.Integer.Long */
-
-pre { padding: 0; }
-.in .highlight pre:before {
-  color: #ccc;
-  content: '>>> ';
-}
-
-/** customizations to highlighting: */
-
-.highlight { background: transparent; }
-
-code pre { margin: 0; } 
-pre code{ 
-  display: block;
-  font-size: 13px;
-  background: #f6f6f6;
-  box-shadow: 0 -5px 5px 1px rgba(0, 0, 0, 0.04) inset;
-  border: solid 1px #ddd;
-  border-left: solid 5px #e2e2f2;
-  padding: 20px;
-}
-pre code .out { 
-  border-bottom: dashed 1px #ccc;
-  padding: 0 0 10px 30px;
-  margin-bottom: 10px;
-}
-pre code .out:last-child{
-  border-bottom: none;
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
-div[role='main'] .console-session{
-  h4 { 
-    margin: 15px 0 0 0; 
-    padding-left: 10px; 
-    color: #666; 
-    background: #fff;    
-    &.expandable { 
-      border-left: solid 5px #e2e2f2;
-      cursor: pointer;
-      padding: 4px 10px;
-      &:hover { 
-        color: #3B3B81;
-        background: #f5f5ff; 
-      }
-    }
-    &:before { content: '▲'; vertical-align: middle; font-size: 9px; padding-right: 8px; color: #3B3B81; }
-    &.snippet-closed:before { content: '▼'; vertical-align: middle; font-size: 9px; padding-right: 8px; color: #3B3B81; }
-  }
-  & > pre:last-child{ /* gets rid of gross whitespace on the first pre tag. weirdness */
-    white-space: normal;
-    background: yellow !important;
-  }
-}
-
-
-
-/* 
- * Helpers 
- */
+ * Helpers */
 
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 .ir br { display: none; }
@@ -272,3 +143,22 @@ div[role='main'] .console-session{
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 .clearfix { *zoom: 1; }
+
+
+/**
+ * iDevices... */
+  /* iPad [portrait + landscape] */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  .sidebar { 
+    position: absolute; 
+    height: auto; 
+  }
+}
+
+/* iPhone [portrait + landscape] */
+@media only screen and (max-device-width: 480px) {
+  .sidebar { 
+    position: absolute; 
+    height: auto; 
+  }
+}
