--- a/docs/templates/index.html.mustache
+++ b/docs/templates/index.html.mustache
@@ -1,35 +1,52 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Batman Docs</title>
-    <meta name="description" content="">
-    <meta name="author" content="Adam West">
+  <title>batman.js | documentation</title>
 
-    <link href="http://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" type="text/css">
-    <link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
+  <script src="http://use.typekit.com/kek3ffx.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
+  <link href="http://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" type="text/css">
+  <link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/docs.js"></script>
+  <meta name="viewport" content="width=device-width">
 
-    <meta name="viewport" content="width=device-width">
+  <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
 
-<div role="sidebar">
-  <ul id="table_of_contents">
-    {{#table_of_contents}}
-      <li>{{> table_of_contents_node }}</li>
-    {{/table_of_contents}}
-  </ul>
-</div>
-<div role="main">
-  {{& main }}
-</div>
-<footer>
+  <div id="top" class="container clearfix">
 
-</footer>
+    <a class="to-top" id="fixed-goto-top" href="#top">Top</a>
+
+    <!-- Left Navigation -->
+    <div class="sidebar">
+
+      <input id="quick-search" type="search" placeholder="Search">
+
+      <nav>
+        <ul id="table-of-contents" class="nav-list">
+          {{#table_of_contents}}
+            <li>{{> table_of_contents_node }}</li>
+          {{/table_of_contents}}
+        </ul>
+      </nav>
+    </div><!-- /.sidebar -->
+
+    <!-- Content -->
+    <div class="content" role="main">
+      {{& main }}
+    </div><!-- /.content -->
+
+
+  </div><!-- /.container -->
+
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script> 
+  <script src="js/quicksearch.jquery.js"></script> 
+  <script src="js/docs.js"></script>
+
 </body>
 </html>
